# SonnarCrew

./: .dockerignore  .gitignore  README.md  Start.cmd  build_docker.py  docker-compose.yml  dockerfile  main.py  makefile  pyproject.toml  requirements.txt
frontend/: README.md  dockerfile  index.html  nginx.conf  tailwind.config.ts
frontend/src/: index.css
frontend/src/pages/: Chat.tsx  Index.tsx
knowledge/: user_preference.txt
src/: main_standalone.py
src/agents/: code_analyzer_agent.py
src/config/: __init__.py  agents.yaml  tasks.yaml
src/crew/: orchestrator.py
src/database/: database.py
src/models/: analysis.py
src/scripts/: init_db.sql  reset_docker.py  run.py  run_docker_with_local.py  startup.sh  wait-for-db.sh
src/services/: analysis_service.py
src/tools/: __init__.py  crew.py  custom_tool.py
