[project]
name = "sonnarcrew"
version = "0.1.0"
description = "SonnarCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
sonnarcrew = "sonnarcrew.main:run"
run_crew = "sonnarcrew.main:run"
train = "sonnarcrew.main:train"
replay = "sonnarcrew.main:replay"
test = "sonnarcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
